# lttoolbox

./: .clang-format  .editorconfig  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.Win32  README.md  autogen.sh  cmake.sh  configure  configure.ac  lttoolbox-2.0.pc.in  lttoolbox-3.0.pc.in  lttoolbox-3.1.pc.in  lttoolbox.pc.in
.github/workflows/: build.yaml
locales/: Makefile.am  en.txt  es.txt  package_list.txt  root.res  root.txt
lttoolbox/: Alphabet.C  Alphabet.H  CMakeLists.txt  Compiler.C  Compiler.H  Compression.C  Compression.H  EntryToken.C  EntryToken.H  Expander.C  Expander.H  FSTProcessor.C  FSTProcessor.H  LtLocale.C  LtLocale.H  Ltstr.H  LttoolsConfig.H.in  Makefile.am  MatchExe.C  MatchExe.H  MatchNode.C  MatchNode.H  MatchState.C  MatchState.H  MyStdio.H  Node.C  PatternList.C  PatternList.H  RegExpCompiler.C  RegExpCompiler.H  SortedVector.C  SortedVector.H  State.C  State.H  TransExe.C  TransExe.H  Transducer.C  Transducer.H  XMLParseUtil.C  acx.cc  (+132 more)
lttoolbox/macosx/: PLACEFRAMEWORKS.txt  lttools_config.h
lttoolbox/macosx/lttoolbox/lttoolbox.xcodeproj/: project.pbxproj  sortiz.mode1v3  sortiz.pbxuser
lttoolbox/win32/: Makefile.am  getopt.c
lttoolbox/xsd/: acx.xsd  dix.xsd
m4/: ax_check_icu.m4
python/: CMakeLists.txt  Makefile.am  analysis.i  lttoolbox.i  lttoolbox.i.in  notes.md  setup.py.in  setup2.py
python/tests/: __init__.py
scripts/: README.md  analysis-length-reweight  annotated-corpus-to-weightlist  equal-weightlist  lt-weight  prepare_regex_strings.py  unannotated-corpus-to-weightlist  w2v-weightlist
scripts/eval/: analysis_length_fit.py  constraintgrammar_fit.py  corpus_split.py  equalweight_fit.py  eval_utils.py  metrics_report.py  unigram_fit.py  w2v_fit.py
scripts/utils/: utils.py  w2v_generate_weights.py  w2v_get_similar_words.py
tests/: README  apertium_process.py  basictest.py  config.py  printtest.py  proctest.py  run_tests.py  subproc.py  weighttest.py
tests/data/: a2b.dix  alphabet.att  alphabetic-after-group-bi.dix  alphabetic-after-group-mono.dix  apostrophe.att  append1.dix  append2.dix  arabic-punct.att  baregroup-mono.dix  basic.acx  basic.lsx  bidix-epsilons-bi.dix  bidix-epsilons-mono.dix  bidixpardef-bi.dix  bidixpardef-mono.dix  big-mono.dix  biproc-skips-tags-mono.dix  careful-ambig-mono.dix  careful-unknown-mono.dix  cat-epsilon-loop.att  cat-epsilon-to-final.att  cat-multiple-fst.att  cat-weight-final.att  cat-weight-heavy.att  cat-weight-initial.att  cat-weight-middle.att  cat-weight-negative.att  cat-weight.att  cmp-bi.dix  cmp-mono.dix  compose1.dix  cp-only-R.dix  cyrillic-case-bi.dix  diverging-paths-bi.dix  diverging-paths-mono.dix  double-clitics-bi.dix  double-clitics-mono.dix  empty-bi.dix  empty-mono.dix  entirely-empty.dix  (+52 more)
tests/data/weightlists/: analyses-comp-mono  default  tags-cat-multiple-fst  tags-comp-mono
tests/lt_append/: __init__.py
tests/lt_apply_acx/: __init__.py
tests/lt_comp/: __init__.py
tests/lt_compose/: __init__.py
tests/lt_expand/: __init__.py
tests/lt_merge/: __init__.py
tests/lt_paradigm/: __init__.py
tests/lt_print/: __init__.py
tests/lt_proc/: __init__.py  compounding.py  null_flush.py  null_flush_invalid_stream_format.py
tests/lt_proc/null_flush/: __init__.py  analysis.py
tests/lt_proc/standard/: basic.py
tests/lt_tmxproc/: __init__.py
tests/lt_trim/: __init__.py
tests/lt_weight/: __init__.py
tests/null_flush/: __init__.py  basic.py
tests~/null_flush/: __init__.py
utf8/utf8/: core.h  unchecked.h
